Remove padding for comments field in register (#680) Properly align checkboxes in right lower corner (#680) Add fix for bootstrap-tables delete and regen dist (#627) Tidy up receipt email send code (use empty instead of isset)

--- a/css/ospos.css
+++ b/css/ospos.css
@@ -167,6 +167,8 @@ label.required
 	overflow-y: auto;
 }
 
-.no-gutter [class*="-1"] {
+.no-gutter [class*="-1"]
+{
 	padding-right:0;
+	padding-left: 0;
 }
